@@ -239,8 +239,10 @@ void OPJ_CALLCONV opj_set_default_encoder_parameters(opj_cparameters_t *paramete
 		parameters->decod_format = -1;
 		parameters->cod_format = -1;
 		parameters->tcp_rates[0] = 0;   
-        parameters->tcp_numlayers = 1;
-        parameters->cp_disto_alloc = 1;
+		parameters->tcp_numlayers = 0;
+    parameters->cp_disto_alloc = 0;
+		parameters->cp_fixed_alloc = 0;
+		parameters->cp_fixed_quality = 0;
 
 /* UniPG>> */
 #ifdef USE_JPWL
